# hodei-draw

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_ES.md  Cargo.toml  LICENSE  Makefile  README.md  README_ES.md  RELEASE_README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy.yml
apps/app-web/: Cargo.toml  Trunk.toml  index.html  input.css  package-lock.json  package.json  styles.css  tailwind.config.js
apps/app-web/src/: lib.rs  main.rs  renderer_canvas2d.rs  renderer_webgpu.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/design-system/: Cargo.toml
crates/design-system/src/: icons.rs  lib.rs  toolbar.rs
crates/design-system/styles/: main.css
crates/ecs/: Cargo.toml
crates/ecs/src/: lib.rs
crates/ui-leptos/: Cargo.toml
crates/ui-leptos/src/: lib.rs  lib_old.rs
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN_FASES.md  ISSUES_BACKLOG.md  PORTS_CONTRACTS.md  PRD.md  REQUISITOS.md  ROADMAP.md  Rust WASM Excalidraw Alternativa PRD.md
tests/: Cargo.toml  README.md  integration_tests.rs  package.json  playwright.config.js  playwright_runner.rs  simple_test.rs
tests/common/: mod.rs
tests/e2e/: drawing_tools.rs  hover_behavior.rs  scale_handles.rs  visual_regression.rs
tests/playwright-tests/: drawing-tools.spec.js  hover-behavior.spec.js  scale-handles.spec.js
