[package]
name = "hodei-draw-e2e-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0"

[dev-dependencies]
criterion = "0.5"

# Configuración para tests E2E
[[test]]
name = "drawing_tools"
path = "e2e/drawing_tools.rs"

[[test]]
name = "hover_behavior"
path = "e2e/hover_behavior.rs"

[[test]]
name = "scale_handles"
path = "e2e/scale_handles.rs"

[[test]]
name = "visual_regression"
path = "e2e/visual_regression.rs"