[package]
name = "app-web"
version = "0.1.0"
edition = "2021"

[lib]
name = "app_web"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = []
webgpu = ["dep:wgpu", "dep:wasm-bindgen-futures"]

[dependencies]
momentum-core = { path = "../../crates/core" }
momentum-ui-leptos = { path = "../../crates/ui-leptos" }
momentum-ecs = { path = "../../crates/ecs" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
wgpu = { version = "26", optional = true }
bytemuck = "1.16"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Window", "Document", "Element", "console", "HtmlCanvasElement"] }
js-sys = "0.3.77"
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = { version = "0.4.50", optional = true }
