[package]
name = "momentum-design-system"
version = "0.1.0"
edition = "2021"

[lib]
name = "momentum_design_system"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
leptos = { version = "0.8.6", default-features = false, features = ["csr"] }
web-sys = { version = "0.3.77", features = [
  "Window",
  "Document",
  "Element",
  "Storage",
  "MediaQueryList",
  "console"
] }
js-sys = "0.3.77"