[package]
name = "momentum-ecs"
version = "0.1.0"
edition = "2021"

[lib]
name = "momentum_ecs"
path = "src/lib.rs"

[dependencies]
bevy_ecs = "0.16"
momentum-core = { path = "../core" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console", "CustomEvent", "Document", "Window"] }
js-sys = "0.3"
